--- a/src/less/dashboard/widgets.less
+++ b/src/less/dashboard/widgets.less
@@ -3,11 +3,10 @@
  */
 .widget {
     background: #ffffff;
-    border: 1px solid transparent;
     border-radius: 2px;
     -webkit-box-shadow: 0 1px 1px rgba(0, 0, 0, 0.05);
     box-shadow: 0 1px 1px rgba(0, 0, 0, 0.05);
-    border-color: #e9e9e9;
+    border: 1px solid #e9e9e9;
     .widget-title {
         color: #767676;
         background-color: #f6f6f6;
@@ -39,11 +38,11 @@
         .error {
             color: #ff0000;
         }
+        .alert {
+            margin-bottom: 10px;
+        }
         button {
             margin-left: 5px;
-        }
-        div.alert {
-            margin-bottom: 10px;
         }
     }
     .widget-body.large {
@@ -60,6 +59,9 @@
     }
     .widget-body.no-padding {
         padding: 0;
+        .error, .message {
+            padding: 20px;
+        }
     }
     .widget-icon {
         background: #30426a;
@@ -82,6 +84,4 @@
         }
     }
 }
-.widget .widget-body.no-padding .error, .widget .widget-body.no-padding .message {
-    padding: 20px;
-}
+
